# pdf-ppt-classifier

./: .gitignore  pyproject.toml  research-DESKTOP-BS96NU5.ipynb  research.ipynb
pdf_classifier/: Main.py  addFeaturestoDF.py  classify_pdf.py  dataSplit.py  extractFeatures.py  model.py  testdata.csv  traindata.csv
sklearn-env/: pyvenv.cfg
sklearn-env/Scripts/: activate  activate.bat
